Export sun.security modules on Java 11+